--- a/index.html
+++ b/index.html
@@ -9,26 +9,22 @@
   <meta name="contact" content="sh.abdulgafar@gmail.com">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="css/materialize.min.css">
-  <link rel="stylesheet" href="css/ionicons.min.css">
-  <style>
-    .parallax-container {
-      height: 600px;
-    }
-  </style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
+ <link href="https://fonts.googleapis.com/css?family=Milonga" rel="stylesheet">
 </head>
 
 <body>
   <div class="navbar-fixed">
     <nav class="" style="background: rgb(82, 12, 82);">
       <div class="container" style="width:95%; margin: 0 auto">
-        <span class="brand-logo white-text left">A</span>
+        <span class="brand-logo white-text left" style="font-family: 'Milonga', cursive;">A</span>
         <ul class="right">
+          <li class="hide-on-med-and-up"><a href="#infoSection" class="pulse"><i class="ion-arrow-down-b "></i></a></li>
           <li style="font-size: .4rem; width: 3rem; margin:0 .5rem"><a target="_blank" href="https://www.fb.me/dev.asipita" class="btn white"><i class="ion-social-facebook blue-text"></i></a></li>
           <li style="font-size: .4rem; width: 3rem; margin:0 .5rem"><a target="_blank" href="https://www.twitter.com/_asipita_" class="btn white"><i class="ion-social-twitter blue-text text-lighten-2"></i></a></li>
           <li style="font-size: .4rem; width: 3rem; margin:0 .5rem"><a target="_blank" href="https://www.linkedin.com/in/shuaib-abdulghaffar-2166a6125/" class="btn white"><i class="ion-social-linkedin blue-text text-darken-2"></i></a></li>
           <li style="font-size: .4rem; width: 3rem; margin:0 .5rem"><a target="_blank" href="https://www.github.com/asipita" class="btn white"><i class="ion-social-github black-text"></i></a></li>
-          <!-- <li><a href="" style="font-size:.8rem; border-radius:50%" ><i class="ion-social-linkedin"></i></a></li> -->
         </ul>
       </div>
     </nav>
@@ -36,7 +32,7 @@
   <main style="">
     <section class="row" style="padding-top: .7rem">
       <div class="col s12">
-        <div class="col s3 carousel carousel-slider" style="height:500px; box-shadow: -.5rem .5rem .5rem rgba(172, 169, 169, 0.2), .5rem .5rem .5rem rgba(172, 169, 169, 0.2)">
+        <div class="col s12 m4 l3 carousel carousel-slider" style="height:500px; box-shadow: -.5rem .5rem .5rem rgba(172, 169, 169, 0.2), .5rem .5rem .5rem rgba(172, 169, 169, 0.2)">
           <a class="carousel-item" href="#one!">
             <img src="asipita.jpg" alt="" width="100%" height="550px">
           </a>
@@ -47,15 +43,15 @@
               <img src="asipita2.jpg" alt="" width="100%" height="550px" >
             </a>
         </div>
-        <div class="col s9" style="height:550px; background: white; padding:1rem 2rem 0">
-          <div class="flow-text grey-text text-lighten-3" style="font-weight:900; background-color: rgb(82, 12, 82); padding:.4rem; width: 7rem; border-radius: 4px">I
+        <div class="col s12 m8 l9" id="infoSection" style="height:550px; background: white; padding:1rem 2rem 0;">
+          <div class="flow-text grey-text text-lighten-3" style="font-weight:900; background-color: rgb(82, 12, 82); padding:.4rem; width: 7rem; border-radius: 4px; font-family: Milonga">I
             am &hellip;</div><br>
           <div class="flow-text grey-text text-darken-3" style="font-weight:bold">Shuaib AbdulGhaffar Asipita</div>
           <br>
-          <article class="flow-text grey-text text-darken-2" style="font-size: 1.2rem">
+          <article class="flow-text grey-text text-darken-2" style="font-size: 1.2rem;  font-family: Milonga">
             A 21 year old Nigerian Muslim, from the Ebira tribe in Kogi State. An Electrical and Electronics
             Engineering graduate from the Federal University of Ilorin, Ilorin, Nigeria, with a major in Computer and
-            Controls.
+            Control Systems Engineering.
             <br><br>
             A chronic lover of nature I am, the skies <i class="ion-ios-cloud blue-text text-lighten-2"></i>, the
             waters <i class="ion-waterdrop blue-text text-darken-4"></i>, the rocks, the greens <i class="ion-leaf green-text text-darken-4"></i>,
@@ -82,14 +78,16 @@
   </main>
 
 
-  <!-- <script src="../../mbill/js/jquery.min.js"></script> -->
-  <script src="js/materialize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+
   <script>
     var elem = document.querySelector('.carousel');
     var instance = M.Carousel.init(elem, {
       fullWidth: true
     });
-
+    setTimeout(()=>{
+      Materialize.toast('Please scroll down to view info')
+    }, 1000);
     setInterval(()=>{
       instance.next()
     }, 3000)
