github pages is cool

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="author" content="Shuaib Abdulghaffar">
-  <meta name="description" content="A sample 'about me' page hosted on github pages">
+  <meta name="description" content="A simple 'about me' page hosted on github pages">
   <meta name="contact" content="sh.abdulgafar@gmail.com">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Shuaib | Abdulghaffar</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
   <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
  <link href="https://fonts.googleapis.com/css?family=Milonga" rel="stylesheet">
 </head>
 
@@ -20,7 +21,7 @@
       <div class="container" style="width:95%; margin: 0 auto">
         <span class="brand-logo white-text left" style="font-family: 'Milonga', cursive;">A</span>
         <ul class="right">
-          <li class="hide-on-med-and-up"><a href="#infoSection" class="pulse"><i class="ion-arrow-down-b "></i></a></li>
+          <li class="hide-on-med-and-up"><a href="#infoSection" class="pulse"><i class="ion-arrow-down-b animated bounce infinite"></i></a></li>
           <li style="font-size: .4rem; width: 3rem; margin:0 .5rem"><a target="_blank" href="https://www.fb.me/dev.asipita" class="btn white"><i class="ion-social-facebook blue-text"></i></a></li>
           <li style="font-size: .4rem; width: 3rem; margin:0 .5rem"><a target="_blank" href="https://www.twitter.com/_asipita_" class="btn white"><i class="ion-social-twitter blue-text text-lighten-2"></i></a></li>
           <li style="font-size: .4rem; width: 3rem; margin:0 .5rem"><a target="_blank" href="https://www.linkedin.com/in/shuaib-abdulghaffar-2166a6125/" class="btn white"><i class="ion-social-linkedin blue-text text-darken-2"></i></a></li>
@@ -50,7 +51,7 @@
           <br>
           <article class="flow-text grey-text text-darken-2" style="font-size: 1.2rem;  font-family: Milonga">
             A 21 year old Nigerian Muslim, from the Ebira tribe in Kogi State. An Electrical and Electronics
-            Engineering graduate from the Federal University of Ilorin, Ilorin, Nigeria, with a major in Computer and
+            Engineering 500 Level student from the Federal University of Ilorin, Ilorin, Nigeria, with a major in Computer and
             Control Systems Engineering.
             <br><br>
             A chronic lover of nature I am, the skies <i class="ion-ios-cloud blue-text text-lighten-2"></i>, the
