--- a/NESI/index.html
+++ b/NESI/index.html
@@ -23,7 +23,7 @@
     <header>
 
       NAVIGATORS ENERGY STAKEHOLDER'S INITIATIVE (NESI) <br> <span>[Suite I-08, Centage Plaza, 14, Allen Avenue, Ikeja, Lagos ]</span> <br>
-      <button>Send Feedback</button>
+      <a href="https://forms.gle/JYAfFaW5fCUACbhT9" target="_blank"><button>Send Feedback</button></a>
     </header>
     <section id="aboutSection">
       <header><span>About Us</span></header>
