--- a/NESI/index.html
+++ b/NESI/index.html
@@ -17,6 +17,7 @@
       <li><a href="#aboutSection">About Us</a></li>
       <li><a href="#aimSection">Our Aims</a></li>
       <li><a href="#contactSection">Contact</a></li>
+      <li id="shalibunz">open in browser</li>
     </ul>
   </nav>
   <main>
@@ -88,6 +89,13 @@
     </p>
     <p style="text-align: center">&copy; 2020 all rights reserved</p>
   </footer>
+  
+  <script>
+    let shalibunz = document.getElementById("shalibunz");
+    shalibunz.addEventListener("click", function(){
+      window.open("https://www.google.com")
+    })
+  </script>
 </body>
 
 </html>
