--- a/NESI/index.html
+++ b/NESI/index.html
@@ -17,7 +17,7 @@
       <li><a href="#aboutSection">About Us</a></li>
       <li><a href="#aimSection">Our Aims</a></li>
       <li><a href="#contactSection">Contact</a></li>
-      <li id="shalibunz">open in browser</li>
+      <li><a href="https://www.google.com">open in browser</a></li>
     </ul>
   </nav>
   <main>
